--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,5 +2,7 @@ version: "2"
 services: 
     server:
         build: .
-        ports: "8888:80"
-        volumes: .:/app
+        ports: 
+            - "8888:80"
+        volumes: 
+            - .:/app
