--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "mathias hansen",
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "^4.14.1"
+    "express": "^4.14.1",
+    "body-parser": "^1.16.0"
   }
 }
